// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should fetch historical balances 2`] = `
[
  {
    "BTC": 0.035979259,
    "_id": "1504224000000",
    "_rev": "1-06b16240c0df539c5d87bc5762c63c94",
    "timestamp": 1504224000000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504310400000",
    "_rev": "1-58b68dd65baccc4c6898b783f9d1b6b2",
    "timestamp": 1504310400000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504396800000",
    "_rev": "1-351c52c4e7d6110750e6449bc7746d46",
    "timestamp": 1504396800000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504483200000",
    "_rev": "1-365bb1289ae0c44606acdd4ae9a40704",
    "timestamp": 1504483200000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504569600000",
    "_rev": "1-c6c4de1249581088abac2d68f1015afa",
    "timestamp": 1504569600000,
  },
  {
    "BTC": 0.035979259,
    "_id": "1504656000000",
    "_rev": "1-94131fd11ca1bff877b223f7b5f1ea15",
    "timestamp": 1504656000000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1504742400000",
    "_rev": "2-37442e18569517e3e8dc62231f583fb0",
    "timestamp": 1504742400000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1504828800000",
    "_rev": "1-ce91ad3807ea9d7d5fadcce65d908135",
    "timestamp": 1504828800000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1504915200000",
    "_rev": "1-b2126b1422c629a15cae38e2b4928bc3",
    "timestamp": 1504915200000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505001600000",
    "_rev": "1-4a4370ef6b8cd55809ddba93a6d0231b",
    "timestamp": 1505001600000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505088000000",
    "_rev": "1-eb9a878c0de5165bbcd63faf30f17281",
    "timestamp": 1505088000000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505174400000",
    "_rev": "1-1dff9d3e58f4bda518453f8e6244d611",
    "timestamp": 1505174400000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505260800000",
    "_rev": "1-045fce3e3ccc2af6ea20fff369a158d0",
    "timestamp": 1505260800000,
  },
  {
    "BTC": 0.072958518,
    "_id": "1505347200000",
    "_rev": "1-6e4f013a8e0590fef8696300ac967249",
    "timestamp": 1505347200000,
  },
]
`;

exports[`should fetch latest balances with price data 1`] = `
[
  {
    "_id": "1505347200000_BTC",
    "balance": 0.072958518,
    "price": undefined,
    "symbol": "BTC",
    "value": undefined,
  },
]
`;

exports[`should fetch latest balances without price data 1`] = `
[
  {
    "_id": "1505347200000_BTC",
    "balance": 0.072958518,
    "price": undefined,
    "symbol": "BTC",
    "value": undefined,
  },
]
`;

exports[`should have balances computed 1`] = `
[
  {
    "_id": "1217276216_3604660326_0",
    "_rev": "2-18bebd9ef23e650d8bc8f03c09ddf381",
    "balance": 0.072958518,
    "change": "0.036979259",
    "changeN": 0.036979259,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "symbol": "BTC",
    "timestamp": 1504789876000,
    "wallet": "Spot",
  },
  {
    "_id": "1217276216_1607323056_0",
    "_rev": "2-b9b99d928b31d7d281ddfbc2250fe888",
    "balance": 0.035979259,
    "change": "0.035979259",
    "changeN": 0.035979259,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "symbol": "BTC",
    "timestamp": 1504267876000,
    "wallet": "Spot",
  },
]
`;

exports[`should not have balances computed 1`] = `
[
  {
    "_id": "1217276216_3604660326_0",
    "_rev": "1-decfa4dda7fb3d8f62c1aad27535c9b3",
    "change": "0.036979259",
    "changeN": 0.036979259,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "symbol": "BTC",
    "timestamp": 1504789876000,
    "wallet": "Spot",
  },
  {
    "_id": "1217276216_1607323056_0",
    "_rev": "1-20ba2e26b49006f30d980d5480b5716b",
    "change": "0.035979259",
    "changeN": 0.035979259,
    "integration": "coinmama",
    "operation": "Buy with Credit Card",
    "symbol": "BTC",
    "timestamp": 1504267876000,
    "wallet": "Spot",
  },
]
`;
